tests/expected_invalid_grant_contracts.diag.out
<input>:11:5: error: 'grant' requires a direct grantor call
        grant start_pass as pass {
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:16:5: error: 'grant' requires a named grantor function
        grant start_pass.value() as pass {
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:21:5: error: unknown function 'missing'
        grant missing() as pass {
        ^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:26:11: error: function 'start_with_count' expects 1 argument(s), got 0
        grant start_with_count() as pass {
              ^^^^^^^^^^^^^^^^^^
<input>:31:28: error: argument 1 to 'start_with_count' has type 'Text', expected 'Int'
        grant start_with_count("seven") as pass {
                               ^^^^^^^
